--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications.",
   "main": "dist/index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-graphql-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-html": ">=8.0.0",
-    "@shopify/react-graphql": ">=5.0.0",
-    "@shopify/react-hooks": "^1.2.1"
+    "@shopify/react-graphql": "^5.0.7",
+    "@shopify/react-hooks": "^1.2.1",
+    "@shopify/react-html": ">=8.0.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
@@ -34,10 +34,12 @@
   "devDependencies": {
     "@shopify/react-effect": "^3.2.1",
     "@shopify/react-testing": "^1.7.5",
-    "apollo-client": "^2.3.8",
     "apollo-cache-inmemory": "^1.3.6",
+    "apollo-client": "^2.3.8",
     "apollo-link": "^1.2.3",
     "typescript": "~3.2.1"
   },
-  "files": ["dist/*"]
+  "files": [
+    "dist/*"
+  ]
 }
