--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing provider that works for isomorphic applications.",
   "main": "dist/index.js",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-html": ">=8.0.0"
+    "@shopify/react-html": "^9.2.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
