--- a/packages/react-csrf-universal-provider/package.json
+++ b/packages/react-csrf-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf-universal-provider",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "description": "A self-serializing/deserializing CSRF token provider that works for for isomorphic applications.",
   "main": "dist/index.js",
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-csrf-universal-provider/README.md",
   "dependencies": {
     "@shopify/react-csrf": ">=1.0.0",
-    "@shopify/react-html": ">=8.0.0",
-    "@shopify/react-universal-provider": "^1.0.4"
+    "@shopify/react-html": "^9.2.2",
+    "@shopify/react-universal-provider": "^1.0.5"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
