--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications.",
   "main": "dist/index.js",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@shopify/react-graphql": "^5.1.2",
     "@shopify/react-hooks": ">=1.1.0",
-    "@shopify/react-html": ">=8.0.0"
+    "@shopify/react-html": "^9.2.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
