--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-dom-mocks",
-  "version": "2.8.2",
+  "version": "2.8.3",
   "license": "MIT",
   "description": "",
   "main": "dist/index.js",
@@ -23,15 +23,15 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-dom-mocks/README.md",
   "dependencies": {
-    "@shopify/async": "^2.0.7",
+    "@shopify/async": "^2.0.8",
     "@shopify/decorators": "^1.1.5",
     "@types/fetch-mock": "^6.0.1",
     "@types/lolex": "^2.1.3",
     "fetch-mock": "^6.3.0",
+    "lodash": ">=4.0.0 <5.0.0",
     "lolex": "^2.7.5",
     "promise": "^8.0.3",
-    "tslib": "^1.9.3",
-    "lodash": ">=4.0.0 <5.0.0"
+    "tslib": "^1.9.3"
   },
   "sideEffects": false
 }
