--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-mock-apollo",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "license": "MIT",
   "description": "Jest + Enzyme mocks for Apollo 2.x.",
   "main": "dist/index.js",
@@ -24,9 +24,9 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-mock-apollo/README.md",
   "dependencies": {
     "apollo-link": "^1.2.3",
+    "graphql": "^14.0.0",
     "graphql-tool-utilities": "^1.0.0",
-    "tslib": "^1.9.3",
-    "graphql": "^14.0.0"
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "apollo-cache-inmemory": "^1.3.6",
