--- a/packages/koa-shopify-webhooks/package.json
+++ b/packages/koa-shopify-webhooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-shopify-webhooks",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "license": "MIT",
   "description": "Receive webhooks from Shopify with ease.",
   "main": "dist/index.js",
@@ -25,11 +25,11 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-shopify-webhooks/README.md",
   "dependencies": {
     "@shopify/network": "^1.4.2",
+    "@types/koa": "^2.0.0",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0",
-    "safe-compare": "^1.1.3",
-    "@types/koa": "^2.0.0"
+    "safe-compare": "^1.1.3"
   },
   "devDependencies": {
     "@types/koa-bodyparser": "^4.2.1",
