--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "3.0.10",
+  "version": "3.0.11",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components.",
   "main": "dist/index.js",
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-async/README.md",
   "dependencies": {
-    "@shopify/async": "^2.0.7",
+    "@shopify/async": "^2.0.8",
     "@shopify/javascript-utilities": "^2.4.0",
-    "@shopify/react-effect": "^3.2.3",
-    "@shopify/react-hydrate": "^1.1.4",
-    "@shopify/react-idle": "^1.0.8",
-    "@shopify/react-intersection-observer": "^2.0.5",
-    "@shopify/useful-types": "^2.0.1",
-    "@shopify/react-hooks": "^1.2.3"
+    "@shopify/react-effect": "^3.2.4",
+    "@shopify/react-hooks": "^1.2.4",
+    "@shopify/react-hydrate": "^1.1.5",
+    "@shopify/react-idle": "^1.0.9",
+    "@shopify/react-intersection-observer": "^2.0.6",
+    "@shopify/useful-types": "^2.0.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
