--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "9.2.3",
+  "version": "9.2.4",
   "license": "MIT",
   "description": "A component to render your react app with no static HTML.",
   "main": "dist/index.js",
@@ -23,21 +23,21 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^3.2.3",
-    "@shopify/react-hydrate": "^1.1.4",
+    "@shopify/react-effect": "^3.2.4",
+    "@shopify/react-hydrate": "^1.1.5",
     "@shopify/react-serialize": "^1.0.17",
     "@shopify/useful-types": "^2.0.1",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
-    "tslib": "^1.9.3",
-    "serialize-javascript": "^1.5.0"
+    "serialize-javascript": "^1.5.0",
+    "tslib": "^1.9.3"
   },
   "peerDependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@shopify/with-env": "^1.1.1"
+    "@shopify/with-env": "^1.1.2"
   },
   "sideEffects": false
 }
