--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "license": "MIT",
   "description": "i18n utilities for React handling translations, formatting, and more.",
   "main": "dist/index.js",
@@ -26,20 +26,20 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@types/glob": "^7.1.1",
-    "@types/babel__core": "^7.0.4",
-    "intl-pluralrules": "^0.2.1",
     "@babel/types": ">=7.0.0",
+    "@types/babel__core": "^7.0.4",
     "@types/babel__template": "^7.0.0",
-    "@types/babel__traverse": "^7.0.0"
+    "@types/babel__traverse": "^7.0.0",
+    "@types/glob": "^7.1.1",
+    "intl-pluralrules": "^0.2.1"
   },
   "dependencies": {
-    "@shopify/dates": "^0.2.3",
+    "@shopify/dates": "^0.2.4",
     "@shopify/decorators": "^1.1.5",
     "@shopify/function-enhancers": "^1.0.5",
     "@shopify/i18n": "^0.1.6",
-    "@shopify/react-effect": "^3.2.3",
-    "@shopify/react-hooks": "^1.2.3",
+    "@shopify/react-effect": "^3.2.4",
+    "@shopify/react-hooks": "^1.2.4",
     "@shopify/useful-types": "^2.0.1",
     "@types/hoist-non-react-statics": "^3.0.1",
     "glob": "^7.1.4",
