--- a/packages/react-server-webpack-plugin/package.json
+++ b/packages/react-server-webpack-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server-webpack-plugin",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "license": "MIT",
   "description": "A webpack plugin that generates entrypoints for @shopify/react-server based applications",
   "main": "dist/index.js",
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server-webpack-plugin/README.md",
   "dependencies": {
-    "@shopify/ast-utilities": "^0.0.5",
-    "webpack-virtual-modules": "^0.1.12",
-    "@babel/types": ">=7.0.0"
+    "@babel/types": ">=7.0.0",
+    "@shopify/ast-utilities": "^0.0.6",
+    "webpack-virtual-modules": "^0.1.12"
   },
   "devDependencies": {
-    "@shopify/react-server": "^0.7.6",
+    "@shopify/react-server": "^0.7.7",
     "@types/webpack-virtual-modules": "^0.1.0",
     "webpack": "^4.0.0"
   },
