--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.7.6",
+  "version": "0.7.7",
   "license": "MIT",
   "description": "Utilities for React server-side rendering.",
   "main": "dist/index.js",
@@ -25,23 +25,23 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server/README.md",
   "dependencies": {
     "@shopify/network": "^1.4.2",
-    "@shopify/react-async": "^3.0.10",
-    "@shopify/react-cookie": "^0.0.3",
-    "@shopify/react-csrf-universal-provider": "^1.0.7",
-    "@shopify/react-effect": "^3.2.3",
-    "@shopify/react-html": "^9.2.3",
-    "@shopify/react-hydrate": "^1.1.4",
-    "@shopify/react-network": "^3.3.1",
-    "@shopify/sewing-kit-koa": "^6.1.2",
+    "@shopify/react-async": "^3.0.11",
+    "@shopify/react-cookie": "^0.0.4",
+    "@shopify/react-csrf-universal-provider": "^1.0.8",
+    "@shopify/react-effect": "^3.2.4",
+    "@shopify/react-html": "^9.2.4",
+    "@shopify/react-hydrate": "^1.1.5",
+    "@shopify/react-network": "^3.3.2",
+    "@shopify/sewing-kit-koa": "^6.1.3",
     "@shopify/useful-types": "^1.3.0",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0"
-   },
+  },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.1.5",
-    "@shopify/with-env": "^1.1.1",
+    "@shopify/jest-koa-mocks": "^2.1.6",
+    "@shopify/with-env": "^1.1.2",
     "@types/koa": "^2.0.0",
     "@types/supertest": "^2.0.8",
     "get-port": "^5.0.0",
@@ -50,9 +50,9 @@
     "supertest": "^4.0.2"
   },
   "peerDependencies": {
+    "isomorphic-fetch": ">=2.0.0",
     "react": ">=16.8.0 <17.0.0",
-    "react-dom": ">=16.8.0 <17.0.0",
-    "isomorphic-fetch": ">=2.0.0"
+    "react-dom": ">=16.8.0 <17.0.0"
   },
   "files": [
     "dist/*"
