--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing provider that works for isomorphic applications.",
   "main": "dist/index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-html": "^9.2.3",
-    "@shopify/react-effect": "^3.2.0"
+    "@shopify/react-effect": "^3.2.4",
+    "@shopify/react-html": "^9.2.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
