--- a/packages/sewing-kit-koa/package.json
+++ b/packages/sewing-kit-koa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/sewing-kit-koa",
-  "version": "6.1.2",
+  "version": "6.1.3",
   "license": "MIT",
   "description": "Easily access Sewing Kit assets from a Koa server.",
   "main": "dist/index.js",
@@ -24,23 +24,23 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/sewing-kit-koa/README.md",
   "dependencies": {
-    "@types/koa-mount": "^4.0.0",
     "@shopify/network": "^1.4.1",
+    "@types/koa-mount": "^4.0.0",
     "@types/koa-static": "^4.0.0",
     "app-root-path": "^2.1.0",
     "browserslist-useragent": "^2.0.1",
     "fs-extra": "^7.0.1",
+    "koa": "^2.5.0",
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
-    "koa": "^2.5.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@shopify/jest-koa-mocks": "^2.1.6",
+    "@shopify/with-env": "^1.1.2",
     "@types/app-root-path": "^1.2.4",
-    "@types/fs-extra": "^5.0.4",
-    "@shopify/jest-koa-mocks": "^2.1.3",
-    "@shopify/with-env": "^1.1.1"
+    "@types/fs-extra": "^5.0.4"
   },
   "files": [
     "dist/*"
