--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/polyfills",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "license": "MIT",
   "description": "Blessed polyfills for web platform features.",
   "sideEffects": true,
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/polyfills/README.md",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "@shopify/useful-types": "^2.1.3",
+    "@shopify/useful-types": "^2.1.4",
     "browser-unhandled-rejection": "^1.0.2",
     "caniuse-api": "^3.0.0",
     "formdata-polyfill": "^3.0.18",
@@ -40,5 +40,8 @@
   "devDependencies": {
     "@types/caniuse-api": "^3.0.0"
   },
-  "files": ["dist/*", "!tsconfig.tsbuildinfo"]
+  "files": [
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
+  ]
 }
