--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "3.0.3",
+  "version": "3.0.3-core-js-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications.",
   "main": "dist/src/index.js",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@shopify/react-graphql": "^6.0.10",
     "@shopify/react-hooks": "^1.5.0",
-    "@shopify/react-html": "^9.2.15",
+    "@shopify/react-html": "^9.2.15-core-js-beta.1",
     "apollo-client": "^2.3.8"
   },
   "peerDependencies": {
