--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "1.0.39",
+  "version": "1.0.39-core-js-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications.",
   "main": "dist/src/index.js",
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-i18n-universal-provider/README.md",
   "dependencies": {
     "@shopify/react-hooks": "^1.5.0",
-    "@shopify/react-html": "^9.2.15",
+    "@shopify/react-html": "^9.2.15-core-js-beta.1",
     "@shopify/react-i18n": "^2.3.11"
   },
   "peerDependencies": {
