--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -27,7 +27,8 @@
     "@shopify/react-graphql": "^6.1.1",
     "@shopify/react-hooks": "^1.5.0",
     "@shopify/react-html": "^9.3.1",
-    "apollo-client": "^2.3.8"
+    "apollo-client": "^2.3.8",
+    "apollo-link-context": "^1.0.19"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
