--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "9.3.13",
+  "version": "9.3.14-async-text-cleanup-beta.1",
   "license": "MIT",
   "description": "A component to render your React app with no static HTML",
   "main": "dist/src/index.js",
@@ -36,7 +36,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.1.3",
+    "@shopify/react-testing": "^2.1.4-async-text-cleanup-beta.1",
     "@shopify/with-env": "^1.1.9"
   },
   "sideEffects": false,
