--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "3.5.1",
+  "version": "3.5.2-async-text-cleanup-beta.1",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "dist/src/index.js",
@@ -27,7 +27,7 @@
     "@shopify/network": "^1.4.7",
     "@shopify/react-effect": "^3.2.12",
     "@shopify/react-hooks": "^1.10.1",
-    "@shopify/react-universal-provider": "^1.1.18",
+    "@shopify/react-universal-provider": "^1.1.19-async-text-cleanup-beta.1",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
