--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.16.1",
+  "version": "0.16.2-async-text-cleanup-beta.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "dist/src/index.js",
@@ -25,12 +25,12 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server/README.md",
   "dependencies": {
     "@shopify/network": "^1.4.7",
-    "@shopify/react-async": "^3.1.19",
-    "@shopify/react-cookie": "^0.0.30",
+    "@shopify/react-async": "^3.1.20-async-text-cleanup-beta.1",
+    "@shopify/react-cookie": "^0.0.31-async-text-cleanup-beta.1",
     "@shopify/react-effect": "^3.2.12",
-    "@shopify/react-html": "^9.3.13",
+    "@shopify/react-html": "^9.3.14-async-text-cleanup-beta.1",
     "@shopify/react-hydrate": "^1.1.24",
-    "@shopify/react-network": "^3.5.1",
+    "@shopify/react-network": "^3.5.2-async-text-cleanup-beta.1",
     "@shopify/sewing-kit-koa": "^6.3.4",
     "@shopify/useful-types": "^2.2.0",
     "chalk": "^2.4.2",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.2.3",
-    "@shopify/react-testing": "^2.1.3",
+    "@shopify/react-testing": "^2.1.4-async-text-cleanup-beta.1",
     "@shopify/with-env": "^1.1.9",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
