--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/async",
-  "version": "2.1.5",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Primitives for loading parts of an application asynchronously",
   "main": "index.js",
