--- a/packages/decorators/package.json
+++ b/packages/decorators/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/decorators",
-  "version": "1.1.12",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "A set of decorators to aid your JavaScript journey",
   "main": "index.js",
@@ -32,7 +32,7 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "@shopify/function-enhancers": "^1.0.10"
+    "@shopify/function-enhancers": "^0.0.1-sknext-beta.1"
   },
   "module": "index.mjs",
   "esnext": "index.esnext",
