--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/logger",
-  "version": "0.1.12",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Opinionated logger for production-scale applications",
   "main": "index.js",
