--- a/packages/performance/package.json
+++ b/packages/performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/performance",
-  "version": "1.2.9",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Primitives for collecting browser performance metrics",
   "main": "index.js",
