--- a/packages/react-google-analytics/package.json
+++ b/packages/react-google-analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-google-analytics",
-  "version": "3.1.16",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Allows React apps to easily embed Google Analytics scripts",
   "main": "index.js",
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-google-analytics/README.md",
   "dependencies": {
-    "@shopify/react-import-remote": "^1.0.44",
+    "@shopify/react-import-remote": "^0.0.1-sknext-beta.1",
     "tslib": "^1.9.3"
   },
   "peerDependencies": {
     "react": "^16.4.1"
   },
   "devDependencies": {
-    "@shopify/enzyme-utilities": "^2.1.13"
+    "@shopify/enzyme-utilities": "^0.0.1-sknext-beta.1"
   },
   "files": [
     "build/*",
