--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "3.5.1",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-network/README.md",
   "dependencies": {
-    "@shopify/network": "^1.4.7",
-    "@shopify/react-effect": "^3.2.12",
-    "@shopify/react-hooks": "^1.10.1",
-    "@shopify/react-universal-provider": "^1.1.18",
+    "@shopify/network": "^0.0.1-sknext-beta.1",
+    "@shopify/react-effect": "^0.0.1-sknext-beta.1",
+    "@shopify/react-hooks": "^0.0.1-sknext-beta.1",
+    "@shopify/react-universal-provider": "^0.0.1-sknext-beta.1",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
@@ -36,7 +36,7 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.2.3"
+    "@shopify/jest-koa-mocks": "^0.0.1-sknext-beta.1"
   },
   "peerDependencies": {
     "koa": "^2.5.0",
