--- a/packages/react-performance/package.json
+++ b/packages/react-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-performance",
-  "version": "1.3.5",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Primitives to measure your React application's performance using `@shopify/performance`",
   "main": "index.js",
@@ -24,13 +24,13 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-performance/README.md",
   "dependencies": {
-    "@shopify/performance": "^1.2.9"
+    "@shopify/performance": "^0.0.1-sknext-beta.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/network": "^1.4.7"
+    "@shopify/network": "^0.0.1-sknext-beta.1"
   },
   "files": [
     "build/*",
