--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.16.2",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -24,24 +24,24 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server/README.md",
   "dependencies": {
-    "@shopify/network": "^1.4.7",
-    "@shopify/react-async": "^3.1.20",
-    "@shopify/react-cookie": "^0.0.30",
-    "@shopify/react-effect": "^3.2.12",
-    "@shopify/react-html": "^9.3.13",
-    "@shopify/react-hydrate": "^1.1.24",
-    "@shopify/react-network": "^3.5.1",
-    "@shopify/sewing-kit-koa": "^6.3.4",
-    "@shopify/useful-types": "^2.2.0",
+    "@shopify/network": "^0.0.1-sknext-beta.1",
+    "@shopify/react-async": "^0.0.1-sknext-beta.1",
+    "@shopify/react-cookie": "^0.0.1-sknext-beta.1",
+    "@shopify/react-effect": "^0.0.1-sknext-beta.1",
+    "@shopify/react-html": "^0.0.1-sknext-beta.1",
+    "@shopify/react-hydrate": "^0.0.1-sknext-beta.1",
+    "@shopify/react-network": "^0.0.1-sknext-beta.1",
+    "@shopify/sewing-kit-koa": "^0.0.1-sknext-beta.1",
+    "@shopify/useful-types": "^0.0.1-sknext-beta.1",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.2.3",
-    "@shopify/react-testing": "^2.1.3",
-    "@shopify/with-env": "^1.1.9",
+    "@shopify/jest-koa-mocks": "^0.0.1-sknext-beta.1",
+    "@shopify/react-testing": "^0.0.1-sknext-beta.1",
+    "@shopify/with-env": "^0.0.1-sknext-beta.1",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "get-port": "^5.0.0",
