--- a/packages/semaphore/package.json
+++ b/packages/semaphore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/semaphore",
-  "version": "1.0.6",
+  "version": "0.0.1-sknext-beta.1",
   "license": "MIT",
   "description": "Counting semaphore",
   "main": "index.js",
