--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/dates",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Lightweight date operations library",
   "main": "index.js",
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/dates/README.md",
   "dependencies": {
-    "@shopify/decorators": "^0.0.1-sknext-beta.1",
+    "@shopify/decorators": "0.0.2-sknext-beta.2",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^0.0.1-sknext-beta.1"
+    "@shopify/jest-dom-mocks": "0.0.2-sknext-beta.2"
   },
   "files": [
     "build/*",
