--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-metrics",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Aims to provide standard middleware and instrumentation tooling for metrics in Koa",
   "main": "index.js",
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-metrics/README.md",
   "dependencies": {
-    "@shopify/statsd": "^0.0.1-sknext-beta.1",
+    "@shopify/statsd": "0.0.2-sknext-beta.2",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^0.0.1-sknext-beta.1",
-    "@shopify/with-env": "^0.0.1-sknext-beta.1",
+    "@shopify/jest-koa-mocks": "0.0.2-sknext-beta.2",
+    "@shopify/with-env": "0.0.2-sknext-beta.2",
     "@types/koa": "^2.0.0",
     "koa": "^2.5.0"
   },
