--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components",
   "main": "index.js",
@@ -24,13 +24,13 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-async/README.md",
   "dependencies": {
-    "@shopify/async": "^0.0.1-sknext-beta.1",
-    "@shopify/react-effect": "^0.0.1-sknext-beta.1",
-    "@shopify/react-hooks": "^0.0.1-sknext-beta.1",
-    "@shopify/react-hydrate": "^0.0.1-sknext-beta.1",
-    "@shopify/react-idle": "^0.0.1-sknext-beta.1",
-    "@shopify/react-intersection-observer": "^0.0.1-sknext-beta.1",
-    "@shopify/useful-types": "^0.0.1-sknext-beta.1"
+    "@shopify/async": "0.0.2-sknext-beta.2",
+    "@shopify/react-effect": "0.0.2-sknext-beta.2",
+    "@shopify/react-hooks": "0.0.2-sknext-beta.2",
+    "@shopify/react-hydrate": "0.0.2-sknext-beta.2",
+    "@shopify/react-idle": "0.0.2-sknext-beta.2",
+    "@shopify/react-intersection-observer": "0.0.2-sknext-beta.2",
+    "@shopify/useful-types": "0.0.2-sknext-beta.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
