--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-form-state",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Manage React forms tersely and type-safely with no magic",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-form-state/README.md",
   "dependencies": {
-    "@shopify/predicates": "^0.0.1-sknext-beta.1",
+    "@shopify/predicates": "0.0.2-sknext-beta.2",
     "fast-deep-equal": "^2.0.1",
     "tslib": "^1.9.3"
   },
@@ -31,8 +31,8 @@
     "react": "^16.4.1"
   },
   "devDependencies": {
-    "@shopify/enzyme-utilities": "^0.0.1-sknext-beta.1",
-    "@shopify/useful-types": "^0.0.1-sknext-beta.1",
+    "@shopify/enzyme-utilities": "0.0.2-sknext-beta.2",
+    "@shopify/useful-types": "0.0.2-sknext-beta.2",
     "faker": "^4.1.0"
   },
   "sideEffects": false,
