--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hydrate",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Utilities for hydrating server-rendered React apps",
   "main": "index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-hydrate/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^0.0.1-sknext-beta.1",
-    "@shopify/react-hooks": "^0.0.1-sknext-beta.1"
+    "@shopify/react-effect": "0.0.2-sknext-beta.2",
+    "@shopify/react-hooks": "0.0.2-sknext-beta.2"
   },
   "devDependencies": {
     "faker": "^4.1.0"
