--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-import-remote/README.md",
   "dependencies": {
-    "@shopify/async": "^0.0.1-sknext-beta.1",
-    "@shopify/react-hooks": "^0.0.1-sknext-beta.1",
-    "@shopify/react-html": "^0.0.1-sknext-beta.1",
-    "@shopify/react-intersection-observer": "^0.0.1-sknext-beta.1",
-    "@shopify/useful-types": "^0.0.1-sknext-beta.1",
+    "@shopify/async": "0.0.2-sknext-beta.2",
+    "@shopify/react-hooks": "0.0.2-sknext-beta.2",
+    "@shopify/react-html": "0.0.2-sknext-beta.2",
+    "@shopify/react-intersection-observer": "0.0.2-sknext-beta.2",
+    "@shopify/useful-types": "0.0.2-sknext-beta.2",
     "tslib": "^1.9.3"
   },
   "peerDependencies": {
