--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing providers that work for isomorphic applications",
   "main": "index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^0.0.1-sknext-beta.1",
-    "@shopify/react-html": "^0.0.1-sknext-beta.1"
+    "@shopify/react-effect": "0.0.2-sknext-beta.2",
+    "@shopify/react-html": "0.0.2-sknext-beta.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
