--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "0.0.1-sknext-beta.1",
+  "version": "0.0.2-sknext-beta.2",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-web-worker/README.md",
   "dependencies": {
-    "@shopify/react-hooks": "^0.0.1-sknext-beta.1",
-    "@shopify/useful-types": "^0.0.1-sknext-beta.1",
-    "@shopify/web-worker": "^0.0.1-sknext-beta.1"
+    "@shopify/react-hooks": "0.0.2-sknext-beta.2",
+    "@shopify/useful-types": "0.0.2-sknext-beta.2",
+    "@shopify/web-worker": "0.0.2-sknext-beta.2"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0",
