--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "2.8.6",
+  "version": "2.8.6-sknext-beta.9",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/address/README.md",
   "devDependencies": {
-    "@shopify/address-mocks": "^1.3.6",
-    "@shopify/jest-dom-mocks": "^2.9.1"
+    "@shopify/address-mocks": "^1.3.6-sknext-beta.9",
+    "@shopify/jest-dom-mocks": "^2.9.1-sknext-beta.9"
   },
   "sideEffects": false,
   "dependencies": {
-    "@shopify/address-consts": "^2.0.2",
+    "@shopify/address-consts": "^2.0.2-sknext-beta.9",
     "tslib": "^1.9.3"
   },
   "files": [
