--- a/packages/function-enhancers/package.json
+++ b/packages/function-enhancers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/function-enhancers",
-  "version": "1.0.10",
+  "version": "1.0.10-sknext-beta.9",
   "license": "MIT",
   "description": "A set of helpers to enhance functions",
   "main": "index.js",
