--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-performance",
-  "version": "1.2.5",
+  "version": "1.2.5-sknext-beta.9",
   "license": "MIT",
   "description": "Creating middleware that sends performance-related data through StatsD",
   "main": "index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-performance/README.md",
   "dependencies": {
-    "@shopify/network": "^1.4.7",
-    "@shopify/performance": "^1.2.9",
-    "@shopify/statsd": "^1.2.4",
+    "@shopify/network": "^1.4.7-sknext-beta.9",
+    "@shopify/performance": "^1.2.9-sknext-beta.9",
+    "@shopify/statsd": "^1.2.4-sknext-beta.9",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
@@ -37,7 +37,7 @@
     "koa": ">=2.0.0"
   },
   "devDependencies": {
-    "@shopify/with-env": "^1.1.9"
+    "@shopify/with-env": "^1.1.9-sknext-beta.9"
   },
   "files": [
     "build/*",
