--- a/packages/koa-shopify-auth/package.json
+++ b/packages/koa-shopify-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-shopify-auth",
-  "version": "3.1.65",
+  "version": "3.1.65-sknext-beta.9",
   "license": "MIT",
   "description": "Middleware to authenticate a Koa application with Shopify",
   "main": "index.js",
@@ -23,15 +23,15 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-shopify-auth/README.md",
   "dependencies": {
-    "@shopify/network": "^1.4.7",
+    "@shopify/network": "^1.4.7-sknext-beta.9",
     "koa-compose": ">=3.0.0 <4.0.0",
     "nonce": "^1.0.4",
     "safe-compare": "^1.1.2",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^2.9.1",
-    "@shopify/jest-koa-mocks": "^2.2.3",
+    "@shopify/jest-dom-mocks": "^2.9.1-sknext-beta.9",
+    "@shopify/jest-koa-mocks": "^2.2.3-sknext-beta.9",
     "@types/koa": "^2.0.0",
     "@types/koa-compose": "*",
     "@types/safe-compare": "^1.1.0",
