--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/network",
-  "version": "1.4.7",
+  "version": "1.4.7-sknext-beta.9",
   "license": "MIT",
   "description": "Common values related to dealing with the network",
   "main": "index.js",
