--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "3.1.14",
+  "version": "3.1.14-sknext-beta.9",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-graphql-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-graphql": "^6.1.14",
-    "@shopify/react-hooks": "^1.10.1",
-    "@shopify/react-html": "^9.3.13",
+    "@shopify/react-graphql": "^6.1.14-sknext-beta.9",
+    "@shopify/react-hooks": "^1.10.1-sknext-beta.9",
+    "@shopify/react-html": "^9.3.13-sknext-beta.9",
     "apollo-client": "^2.3.8",
     "apollo-link-context": "^1.0.19"
   },
@@ -34,7 +34,7 @@
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^3.2.12",
+    "@shopify/react-effect": "^3.2.12-sknext-beta.9",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-link": "^1.2.3"
   },
