--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-router",
-  "version": "0.0.30",
+  "version": "0.0.30-sknext-beta.9",
   "license": "MIT",
   "description": "A universal router for React",
   "main": "index.js",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-router/README.md",
   "dependencies": {
-    "@shopify/react-network": "^3.5.1",
+    "@shopify/react-network": "^3.5.1-sknext-beta.9",
     "@types/react-router-dom": "^4.3.5",
     "react-router-dom": "^5.0.1"
   },
