--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.16.2",
+  "version": "0.16.2-sknext-beta.9",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -24,24 +24,24 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server/README.md",
   "dependencies": {
-    "@shopify/network": "^1.4.7",
-    "@shopify/react-async": "^3.1.20",
-    "@shopify/react-cookie": "^0.0.30",
-    "@shopify/react-effect": "^3.2.12",
-    "@shopify/react-html": "^9.3.13",
-    "@shopify/react-hydrate": "^1.1.24",
-    "@shopify/react-network": "^3.5.1",
-    "@shopify/sewing-kit-koa": "^6.3.4",
-    "@shopify/useful-types": "^2.2.0",
+    "@shopify/network": "^1.4.7-sknext-beta.9",
+    "@shopify/react-async": "^3.1.20-sknext-beta.9",
+    "@shopify/react-cookie": "^0.0.30-sknext-beta.9",
+    "@shopify/react-effect": "^3.2.12-sknext-beta.9",
+    "@shopify/react-html": "^9.3.13-sknext-beta.9",
+    "@shopify/react-hydrate": "^1.1.24-sknext-beta.9",
+    "@shopify/react-network": "^3.5.1-sknext-beta.9",
+    "@shopify/sewing-kit-koa": "^6.3.4-sknext-beta.9",
+    "@shopify/useful-types": "^2.2.0-sknext-beta.9",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.2.3",
-    "@shopify/react-testing": "^2.1.3",
-    "@shopify/with-env": "^1.1.9",
+    "@shopify/jest-koa-mocks": "^2.2.3-sknext-beta.9",
+    "@shopify/react-testing": "^2.1.3-sknext-beta.9",
+    "@shopify/with-env": "^1.1.9-sknext-beta.9",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "get-port": "^5.0.0",
