--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "1.2.21",
+  "version": "1.2.21-sknext-beta.9",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-web-worker/README.md",
   "dependencies": {
-    "@shopify/react-hooks": "^1.10.1",
-    "@shopify/useful-types": "^2.2.0",
-    "@shopify/web-worker": "^1.4.1"
+    "@shopify/react-hooks": "^1.10.1-sknext-beta.9",
+    "@shopify/useful-types": "^2.2.0-sknext-beta.9",
+    "@shopify/web-worker": "^1.4.1-sknext-beta.9"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0",
