--- a/packages/react-csrf-universal-provider/package.json
+++ b/packages/react-csrf-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf-universal-provider",
-  "version": "1.1.18",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing CSRF token provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,15 +24,15 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-csrf-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-csrf": "^1.0.12",
-    "@shopify/react-html": "^9.3.13",
-    "@shopify/react-universal-provider": "^1.1.18"
+    "@shopify/react-csrf": "1.0.0-sknext-beta.1",
+    "@shopify/react-html": "1.0.0-sknext-beta.1",
+    "@shopify/react-universal-provider": "1.0.0-sknext-beta.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^3.2.12",
+    "@shopify/react-effect": "1.0.0-sknext-beta.1",
     "faker": "^4.1.0"
   },
   "files": [
