--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "1.0.44",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-import-remote/README.md",
   "dependencies": {
-    "@shopify/async": "^2.1.5",
-    "@shopify/react-hooks": "^1.10.1",
-    "@shopify/react-html": "^9.3.13",
-    "@shopify/react-intersection-observer": "^2.0.15",
-    "@shopify/useful-types": "^2.2.0",
+    "@shopify/async": "1.0.0-sknext-beta.1",
+    "@shopify/react-hooks": "1.0.0-sknext-beta.1",
+    "@shopify/react-html": "1.0.0-sknext-beta.1",
+    "@shopify/react-intersection-observer": "1.0.0-sknext-beta.1",
+    "@shopify/useful-types": "1.0.0-sknext-beta.1",
     "tslib": "^1.9.3"
   },
   "peerDependencies": {
