--- a/packages/address-consts/package.json
+++ b/packages/address-consts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address-consts",
-  "version": "2.0.2",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Constants and types relating to `@shopify/address`",
   "main": "index.js",
