--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/dates",
-  "version": "0.4.1",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Lightweight date operations library",
   "main": "index.js",
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/dates/README.md",
   "dependencies": {
-    "@shopify/decorators": "^1.1.12",
+    "@shopify/decorators": "1.0.0-sknext-beta.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^2.9.1"
+    "@shopify/jest-dom-mocks": "1.0.0-sknext-beta.1"
   },
   "files": [
     "build/*",
