--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-dom-mocks",
-  "version": "2.9.1",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Jest mocking utilities for working with the DOM",
   "main": "index.js",
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-dom-mocks/README.md",
   "dependencies": {
-    "@shopify/async": "^2.1.5",
-    "@shopify/decorators": "^1.1.12",
+    "@shopify/async": "1.0.0-sknext-beta.1",
+    "@shopify/decorators": "1.0.0-sknext-beta.1",
     "@types/fetch-mock": "^6.0.1",
     "@types/lolex": "^2.1.3",
     "fetch-mock": "^6.3.0",
