--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-koa-mocks",
-  "version": "2.2.3",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Utilities to easily stub Koa context and cookies",
   "main": "index.js",
