--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-metrics",
-  "version": "0.4.2",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Aims to provide standard middleware and instrumentation tooling for metrics in Koa",
   "main": "index.js",
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-metrics/README.md",
   "dependencies": {
-    "@shopify/statsd": "^1.2.4",
+    "@shopify/statsd": "1.0.0-sknext-beta.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.2.3",
-    "@shopify/with-env": "^1.1.9",
+    "@shopify/jest-koa-mocks": "1.0.0-sknext-beta.1",
+    "@shopify/with-env": "1.0.0-sknext-beta.1",
     "@types/koa": "^2.0.0",
     "koa": "^2.5.0"
   },
