--- a/packages/mime-types/package.json
+++ b/packages/mime-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/mime-types",
-  "version": "0.1.1",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "MIME type consistency",
   "main": "index.js",
