--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "6.1.14",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -26,19 +26,19 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^2.1.5",
-    "@shopify/react-async": "^3.1.20",
-    "@shopify/react-effect": "^3.2.12",
-    "@shopify/react-hooks": "^1.10.1",
-    "@shopify/react-idle": "^1.0.19",
-    "@shopify/useful-types": "^2.2.0",
+    "@shopify/async": "1.0.0-sknext-beta.1",
+    "@shopify/react-async": "1.0.0-sknext-beta.1",
+    "@shopify/react-effect": "1.0.0-sknext-beta.1",
+    "@shopify/react-hooks": "1.0.0-sknext-beta.1",
+    "@shopify/react-idle": "1.0.0-sknext-beta.1",
+    "@shopify/useful-types": "1.0.0-sknext-beta.1",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "graphql-typed": "^0.5.0"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.1.3"
+    "@shopify/react-testing": "1.0.0-sknext-beta.1"
   },
   "files": [
     "build/*",
