--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "9.3.13",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "A component to render your React app with no static HTML",
   "main": "index.js",
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^3.2.12",
-    "@shopify/react-hydrate": "^1.1.24",
-    "@shopify/useful-types": "^2.2.0",
+    "@shopify/react-effect": "1.0.0-sknext-beta.1",
+    "@shopify/react-hydrate": "1.0.0-sknext-beta.1",
+    "@shopify/useful-types": "1.0.0-sknext-beta.1",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
     "serialize-javascript": "^3.0.0",
@@ -36,9 +36,9 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.1.3",
-    "@shopify/with-env": "^1.1.9",
-    "@shopify/jest-dom-mocks": "^2.9.1"
+    "@shopify/jest-dom-mocks": "1.0.0-sknext-beta.1",
+    "@shopify/react-testing": "1.0.0-sknext-beta.1",
+    "@shopify/with-env": "1.0.0-sknext-beta.1"
   },
   "sideEffects": false,
   "files": [
