--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "1.0.19",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-idle/README.md",
   "dependencies": {
-    "@shopify/async": "^2.1.5",
-    "@shopify/useful-types": "^2.2.0"
+    "@shopify/async": "1.0.0-sknext-beta.1",
+    "@shopify/useful-types": "1.0.0-sknext-beta.1"
   },
   "peerDependencies": {
     "react": "^16.8.0"
