--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-shortcuts",
-  "version": "3.0.14",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Declaratively and efficiently match shortcut combinations in your React application",
   "main": "index.js",
