--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/rpc",
-  "version": "1.0.7",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "Utilities for `postMessage`-based remote procedure calls",
   "main": "index.js",
