--- a/packages/statsd/package.json
+++ b/packages/statsd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/statsd",
-  "version": "1.2.4",
+  "version": "1.0.0-sknext-beta.1",
   "license": "MIT",
   "description": "An opinionated StatsD client for Shopify Node.js servers and other StatsD utilities",
   "main": "index.js",
