--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/graphql-persisted",
-  "version": "1.1.25",
+  "version": "1.2.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Apollo and Koa integrations for persisted GraphQL queries.",
   "sideEffects": false,
@@ -31,7 +31,7 @@
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/sewing-kit-koa": "^6.3.6"
+    "@shopify/sewing-kit-koa": "^6.4.0-sk-next-beta.0"
   },
   "files": [
     "build/*",
