--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n",
-  "version": "5.1.7",
+  "version": "5.2.0-sk-next-beta.0",
   "license": "MIT",
   "description": "i18n utilities for React handling translations, formatting, and more",
   "main": "index.js",
@@ -33,13 +33,13 @@
     "intl-pluralrules": "^0.2.1"
   },
   "dependencies": {
-    "@shopify/dates": "^0.4.5",
-    "@shopify/decorators": "^1.1.13",
-    "@shopify/function-enhancers": "^1.0.11",
-    "@shopify/i18n": "^0.1.12",
-    "@shopify/react-effect": "^3.2.13",
-    "@shopify/react-hooks": "^1.11.2",
-    "@shopify/useful-types": "^2.2.1",
+    "@shopify/dates": "^0.5.0-sk-next-beta.0",
+    "@shopify/decorators": "^1.2.0-sk-next-beta.0",
+    "@shopify/function-enhancers": "^1.1.0-sk-next-beta.0",
+    "@shopify/i18n": "^0.2.0-sk-next-beta.0",
+    "@shopify/react-effect": "^3.3.0-sk-next-beta.0",
+    "@shopify/react-hooks": "^1.12.0-sk-next-beta.0",
+    "@shopify/useful-types": "^2.3.0-sk-next-beta.0",
     "@types/hoist-non-react-statics": "^3.0.1",
     "change-case": "^3.1.0",
     "glob": "^7.1.4",
