--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/ast-utilities",
-  "version": "0.1.1",
+  "version": "0.2.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Utilities for working with Abstract Syntax Trees (ASTs)",
   "main": "index.js",
