--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/logger",
-  "version": "0.1.13",
+  "version": "0.2.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Opinionated logger for production-scale applications",
   "main": "index.js",
