--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/network",
-  "version": "1.5.1",
+  "version": "1.6.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Common values related to dealing with the network",
   "main": "index.js",
