--- a/packages/performance/package.json
+++ b/packages/performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/performance",
-  "version": "1.2.10",
+  "version": "1.3.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Primitives for collecting browser performance metrics",
   "main": "index.js",
@@ -42,7 +42,6 @@
       "esnext": "./index.esnext"
     }
   },
-
   "dependencies": {
     "tslib": "^1.14.1"
   }
