--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "3.1.25",
+  "version": "3.2.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components",
   "main": "index.js",
@@ -24,13 +24,13 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-async/README.md",
   "dependencies": {
-    "@shopify/async": "^2.1.7",
-    "@shopify/react-effect": "^3.2.13",
-    "@shopify/react-hooks": "^1.11.2",
-    "@shopify/react-hydrate": "^1.1.27",
-    "@shopify/react-idle": "^1.0.21",
-    "@shopify/react-intersection-observer": "^2.0.16",
-    "@shopify/useful-types": "^2.2.1",
+    "@shopify/async": "^2.2.0-sk-next-beta.0",
+    "@shopify/react-effect": "^3.3.0-sk-next-beta.0",
+    "@shopify/react-hooks": "^1.12.0-sk-next-beta.0",
+    "@shopify/react-hydrate": "^1.2.0-sk-next-beta.0",
+    "@shopify/react-idle": "^1.1.0-sk-next-beta.0",
+    "@shopify/react-intersection-observer": "^2.1.0-sk-next-beta.0",
+    "@shopify/useful-types": "^2.3.0-sk-next-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
