--- a/packages/react-bugsnag/package.json
+++ b/packages/react-bugsnag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-bugsnag",
-  "version": "1.0.2",
+  "version": "1.1.0-sk-next-beta.0",
   "license": "MIT",
   "description": "An opinionated wrapper for Bugsnag's React plugin",
   "main": "index.js",
