--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-compose",
-  "version": "1.0.15",
+  "version": "1.1.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Cleanly compose multiple component enhancers together with minimal fuss",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-compose/README.md",
   "dependencies": {
-    "@shopify/useful-types": "^2.2.1",
+    "@shopify/useful-types": "^2.3.0-sk-next-beta.0",
     "hoist-non-react-statics": "^3.0.1",
     "tslib": "^1.14.1"
   },
