--- a/packages/react-cookie/package.json
+++ b/packages/react-cookie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-cookie",
-  "version": "0.0.37",
+  "version": "0.1.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Cookies in React for the server and client",
   "main": "index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-cookie/README.md",
   "dependencies": {
-    "@shopify/react-hooks": "^1.11.2",
-    "@shopify/react-network": "^3.5.8",
+    "@shopify/react-hooks": "^1.12.0-sk-next-beta.0",
+    "@shopify/react-network": "^3.6.0-sk-next-beta.0",
     "cookie": "^0.4.0",
     "tslib": "^1.14.1"
   },
