--- a/packages/react-csrf/package.json
+++ b/packages/react-csrf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf",
-  "version": "1.0.13",
+  "version": "1.1.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Share CSRF tokens throughout a React application",
   "main": "index.js",
