--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hooks",
-  "version": "1.11.2",
+  "version": "1.12.0-sk-next-beta.0",
   "license": "MIT",
   "description": "A collection of primitive React hooks",
   "main": "index.js",
