--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "1.0.72",
+  "version": "1.1.0-sk-next-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,16 +24,16 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-i18n-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-hooks": "^1.11.2",
-    "@shopify/react-html": "^10.0.2",
-    "@shopify/react-i18n": "^5.1.7",
+    "@shopify/react-hooks": "^1.12.0-sk-next-beta.0",
+    "@shopify/react-html": "^10.1.0-sk-next-beta.0",
+    "@shopify/react-i18n": "^5.2.0-sk-next-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^3.2.13",
+    "@shopify/react-effect": "^3.3.0-sk-next-beta.0",
     "faker": "^4.1.0"
   },
   "files": [
