--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.20.2",
+  "version": "0.21.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -24,15 +24,15 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-server/README.md",
   "dependencies": {
-    "@shopify/network": "^1.5.1",
-    "@shopify/react-async": "^3.1.25",
-    "@shopify/react-cookie": "^0.0.37",
-    "@shopify/react-effect": "^3.2.13",
-    "@shopify/react-html": "^10.0.2",
-    "@shopify/react-hydrate": "^1.1.27",
-    "@shopify/react-network": "^3.5.8",
-    "@shopify/sewing-kit-koa": "^6.3.6",
-    "@shopify/useful-types": "^2.2.1",
+    "@shopify/network": "^1.6.0-sk-next-beta.0",
+    "@shopify/react-async": "^3.2.0-sk-next-beta.0",
+    "@shopify/react-cookie": "^0.1.0-sk-next-beta.0",
+    "@shopify/react-effect": "^3.3.0-sk-next-beta.0",
+    "@shopify/react-html": "^10.1.0-sk-next-beta.0",
+    "@shopify/react-hydrate": "^1.2.0-sk-next-beta.0",
+    "@shopify/react-network": "^3.6.0-sk-next-beta.0",
+    "@shopify/sewing-kit-koa": "^6.4.0-sk-next-beta.0",
+    "@shopify/useful-types": "^2.3.0-sk-next-beta.0",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
     "koa-compose": ">=3.0.0 <4.0.0",
@@ -40,9 +40,9 @@
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.2.4",
-    "@shopify/react-testing": "^2.1.4",
-    "@shopify/with-env": "^1.1.10",
+    "@shopify/jest-koa-mocks": "^2.3.0-sk-next-beta.0",
+    "@shopify/react-testing": "^2.2.0-sk-next-beta.0",
+    "@shopify/with-env": "^1.2.0-sk-next-beta.0",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "get-port": "^5.0.0",
