--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "3.5.1",
+  "version": "3.5.2-react-html-fix-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -26,8 +26,8 @@
   "dependencies": {
     "@shopify/react-graphql": "^6.2.0",
     "@shopify/react-hooks": "^1.12.0",
-    "@shopify/react-html": "^10.2.0",
-    "@shopify/react-network": "^3.6.1",
+    "@shopify/react-html": "^10.2.1-react-html-fix-beta.1",
+    "@shopify/react-network": "^3.6.2-react-html-fix-beta.1",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
