--- a/packages/react-google-analytics/package.json
+++ b/packages/react-google-analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-google-analytics",
-  "version": "3.2.1",
+  "version": "3.2.2-react-html-fix-beta.1",
   "license": "MIT",
   "description": "Allows React apps to easily embed Google Analytics scripts",
   "main": "index.js",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-google-analytics/README.md",
   "dependencies": {
-    "@shopify/react-import-remote": "^1.2.1",
+    "@shopify/react-import-remote": "^1.2.2-react-html-fix-beta.1",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
