--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-router",
-  "version": "0.2.1",
+  "version": "0.2.2-react-html-fix-beta.1",
   "license": "MIT",
   "description": "A universal router for React",
   "main": "index.js",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-router/README.md",
   "dependencies": {
-    "@shopify/react-network": "^3.6.1",
+    "@shopify/react-network": "^3.6.2-react-html-fix-beta.1",
     "@types/react-router-dom": "*",
     "react-router-dom": ">=5.1.0 <6.0.0",
     "tslib": "^1.14.1"
