--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.21.1",
+  "version": "0.21.2-react-html-fix-beta.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@shopify/network": "^1.6.0",
     "@shopify/react-async": "^3.2.0",
-    "@shopify/react-cookie": "^0.1.1",
+    "@shopify/react-cookie": "^0.1.2-react-html-fix-beta.1",
     "@shopify/react-effect": "^3.3.0",
-    "@shopify/react-html": "^10.2.0",
+    "@shopify/react-html": "^10.2.1-react-html-fix-beta.1",
     "@shopify/react-hydrate": "^1.2.0",
-    "@shopify/react-network": "^3.6.1",
+    "@shopify/react-network": "^3.6.2-react-html-fix-beta.1",
     "@shopify/sewing-kit-koa": "^6.4.1",
     "@shopify/useful-types": "^2.3.0",
     "chalk": "^2.4.2",
