--- a/packages/react-tracking-pixel/package.json
+++ b/packages/react-tracking-pixel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-tracking-pixel",
-  "version": "3.1.1",
+  "version": "3.1.2-react-html-fix-beta.1",
   "license": "MIT",
   "description": "Allows React apps to easily embed tracking pixel iframes",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-tracking-pixel/README.md",
   "dependencies": {
-    "@shopify/react-html": "^10.2.0",
+    "@shopify/react-html": "^10.2.1-react-html-fix-beta.1",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
