--- a/packages/graphql-typed/package.json
+++ b/packages/graphql-typed/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-typed",
-  "version": "0.6.1",
+  "version": "0.6.1-beta.1",
   "license": "MIT",
   "description": "A more strongly typed version of GraphQL's DocumentNode.",
   "main": "index.js",
