--- a/packages/react-csrf-universal-provider/package.json
+++ b/packages/react-csrf-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf-universal-provider",
-  "version": "1.2.3",
+  "version": "1.2.3-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing CSRF token provider that works for isomorphic applications",
   "main": "index.js",
@@ -25,8 +25,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-csrf-universal-provider/README.md",
   "dependencies": {
     "@shopify/react-csrf": "^1.1.1",
-    "@shopify/react-html": "^10.2.2",
-    "@shopify/react-universal-provider": "^1.2.3",
+    "@shopify/react-html": "^10.2.2-beta.1",
+    "@shopify/react-universal-provider": "^1.2.3-beta1",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
