--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "1.2.3",
+  "version": "1.2.3-beta.1",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -25,7 +25,7 @@
   "dependencies": {
     "@shopify/async": "^2.2.1",
     "@shopify/react-hooks": "^1.12.1",
-    "@shopify/react-html": "^10.2.2",
+    "@shopify/react-html": "^10.2.2-beta.1",
     "@shopify/react-intersection-observer": "^2.1.1",
     "@shopify/useful-types": "^2.3.1",
     "tslib": "^1.14.1"
