--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "3.6.3",
+  "version": "3.6.3-beta.1",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "@shopify/network": "^1.6.1",
     "@shopify/react-effect": "^3.3.1",
     "@shopify/react-hooks": "^1.12.1",
-    "@shopify/react-universal-provider": "^1.2.3",
+    "@shopify/react-universal-provider": "^1.2.3-beta1",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
