--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.21.3",
+  "version": "0.21.3-beta.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -26,11 +26,11 @@
   "dependencies": {
     "@shopify/network": "^1.6.1",
     "@shopify/react-async": "^3.2.1",
-    "@shopify/react-cookie": "^0.1.3",
+    "@shopify/react-cookie": "^0.1.3-beta.1",
     "@shopify/react-effect": "^3.3.1",
-    "@shopify/react-html": "^10.2.2",
+    "@shopify/react-html": "^10.2.2-beta.1",
     "@shopify/react-hydrate": "^1.2.1",
-    "@shopify/react-network": "^3.6.3",
+    "@shopify/react-network": "^3.6.3-beta.1",
     "@shopify/sewing-kit-koa": "^6.4.2",
     "@shopify/useful-types": "^2.3.1",
     "chalk": "^2.4.2",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.3.1",
-    "@shopify/react-testing": "^2.2.1",
+    "@shopify/react-testing": "^2.2.1-beta.1",
     "@shopify/with-env": "^1.2.1",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
