--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "6.2.0",
+  "version": "6.2.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -26,12 +26,12 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^2.2.0",
-    "@shopify/react-async": "^3.2.0",
-    "@shopify/react-effect": "^3.3.0",
-    "@shopify/react-hooks": "^1.12.0",
-    "@shopify/react-idle": "^1.1.0",
-    "@shopify/useful-types": "^2.3.0",
+    "@shopify/async": "^2.2.1-mandatory-extensions-beta.0",
+    "@shopify/react-async": "^3.2.1-mandatory-extensions-beta.0",
+    "@shopify/react-effect": "^3.3.1-mandatory-extensions-beta.0",
+    "@shopify/react-hooks": "^1.12.1-mandatory-extensions-beta.0",
+    "@shopify/react-idle": "^1.1.1-mandatory-extensions-beta.0",
+    "@shopify/useful-types": "^2.3.1-mandatory-extensions-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
@@ -39,7 +39,7 @@
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.2.0"
+    "@shopify/react-testing": "^2.2.1-mandatory-extensions-beta.0"
   },
   "files": [
     "build/*",
