--- a/packages/address-consts/package.json
+++ b/packages/address-consts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address-consts",
-  "version": "2.2.0",
+  "version": "2.2.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Constants and types relating to `@shopify/address`",
   "main": "index.js",
