--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "2.10.0",
+  "version": "2.10.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/address/README.md",
   "devDependencies": {
-    "@shopify/address-mocks": "^1.5.0",
-    "@shopify/jest-dom-mocks": "^2.10.0"
+    "@shopify/address-mocks": "^1.5.1-mandatory-extensions-beta.0",
+    "@shopify/jest-dom-mocks": "^2.10.1-mandatory-extensions-beta.0"
   },
   "sideEffects": false,
   "dependencies": {
-    "@shopify/address-consts": "^2.2.0",
+    "@shopify/address-consts": "^2.2.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "files": [
