--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/browser",
-  "version": "1.1.0",
+  "version": "1.1.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Utilities for extracting browser information from user-agents",
   "main": "index.js",
