--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/dates",
-  "version": "0.5.0",
+  "version": "0.5.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Lightweight date operations library",
   "main": "index.js",
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/dates/README.md",
   "dependencies": {
-    "@shopify/decorators": "^1.2.0",
+    "@shopify/decorators": "^1.2.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^2.10.0"
+    "@shopify/jest-dom-mocks": "^2.10.1-mandatory-extensions-beta.0"
   },
   "files": [
     "build/*",
