--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-dom-mocks",
-  "version": "2.10.0",
+  "version": "2.10.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Jest mocking utilities for working with the DOM",
   "main": "index.js",
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-dom-mocks/README.md",
   "dependencies": {
-    "@shopify/async": "^2.2.0",
-    "@shopify/decorators": "^1.2.0",
+    "@shopify/async": "^2.2.1-mandatory-extensions-beta.0",
+    "@shopify/decorators": "^1.2.1-mandatory-extensions-beta.0",
     "@types/fetch-mock": "^7.3.3",
     "@types/lolex": "^2.1.3",
     "fetch-mock": "^9.11.0",
