--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-koa-mocks",
-  "version": "2.3.0",
+  "version": "2.3.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Utilities to easily stub Koa context and cookies",
   "main": "index.js",
