--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-metrics",
-  "version": "0.5.0",
+  "version": "0.5.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Aims to provide standard middleware and instrumentation tooling for metrics in Koa",
   "main": "index.js",
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-metrics/README.md",
   "dependencies": {
-    "@shopify/statsd": "^2.1.0",
+    "@shopify/statsd": "^2.1.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.3.0",
-    "@shopify/with-env": "^1.2.0",
+    "@shopify/jest-koa-mocks": "^2.3.1-mandatory-extensions-beta.0",
+    "@shopify/with-env": "^1.2.1-mandatory-extensions-beta.0",
     "@types/koa": "^2.0.0",
     "koa": "^2.5.0"
   },
