--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-performance",
-  "version": "1.3.0",
+  "version": "1.3.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Creating middleware that sends performance-related data through StatsD",
   "main": "index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-performance/README.md",
   "dependencies": {
-    "@shopify/network": "^1.6.0",
-    "@shopify/performance": "^1.3.0",
-    "@shopify/statsd": "^2.1.0",
+    "@shopify/network": "^1.6.1-mandatory-extensions-beta.0",
+    "@shopify/performance": "^1.3.1-mandatory-extensions-beta.0",
+    "@shopify/statsd": "^2.1.1-mandatory-extensions-beta.0",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
@@ -38,7 +38,7 @@
     "koa": ">=2.0.0"
   },
   "devDependencies": {
-    "@shopify/with-env": "^1.2.0"
+    "@shopify/with-env": "^1.2.1-mandatory-extensions-beta.0"
   },
   "files": [
     "build/*",
