--- a/packages/performance/package.json
+++ b/packages/performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/performance",
-  "version": "1.3.0",
+  "version": "1.3.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Primitives for collecting browser performance metrics",
   "main": "index.js",
