--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/predicates",
-  "version": "1.3.0",
+  "version": "1.3.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "A set of common JavaScript predicates",
   "main": "index.js",
