--- a/packages/react-csrf-universal-provider/package.json
+++ b/packages/react-csrf-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf-universal-provider",
-  "version": "1.2.0",
+  "version": "1.2.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing CSRF token provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,16 +24,16 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-csrf-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-csrf": "^1.1.0",
-    "@shopify/react-html": "^10.1.0",
-    "@shopify/react-universal-provider": "^1.2.0",
+    "@shopify/react-csrf": "^1.1.1-mandatory-extensions-beta.0",
+    "@shopify/react-html": "^10.1.1-mandatory-extensions-beta.0",
+    "@shopify/react-universal-provider": "^1.2.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^3.3.0",
+    "@shopify/react-effect": "^3.3.1-mandatory-extensions-beta.0",
     "faker": "^4.1.0"
   },
   "files": [
