--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-form-state",
-  "version": "0.12.0",
+  "version": "0.12.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Manage React forms tersely and type-safely with no magic",
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-form-state/README.md",
   "dependencies": {
-    "@shopify/predicates": "^1.3.0",
+    "@shopify/predicates": "^1.3.1-mandatory-extensions-beta.0",
     "fast-deep-equal": "^3.1.3",
     "tslib": "^1.14.1"
   },
@@ -31,8 +31,8 @@
     "react": "^16.4.1"
   },
   "devDependencies": {
-    "@shopify/enzyme-utilities": "^2.2.0",
-    "@shopify/useful-types": "^2.3.0",
+    "@shopify/enzyme-utilities": "^2.2.1-mandatory-extensions-beta.0",
+    "@shopify/useful-types": "^2.3.1-mandatory-extensions-beta.0",
     "faker": "^4.1.0"
   },
   "sideEffects": false,
