--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hydrate",
-  "version": "1.2.0",
+  "version": "1.2.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Utilities for hydrating server-rendered React apps",
   "main": "index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-hydrate/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^3.3.0",
-    "@shopify/react-hooks": "^1.12.0",
+    "@shopify/react-effect": "^3.3.1-mandatory-extensions-beta.0",
+    "@shopify/react-hooks": "^1.12.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
