--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "1.1.0",
+  "version": "1.1.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-idle/README.md",
   "dependencies": {
-    "@shopify/async": "^2.2.0",
-    "@shopify/useful-types": "^2.3.0",
+    "@shopify/async": "^2.2.1-mandatory-extensions-beta.0",
+    "@shopify/useful-types": "^2.3.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
