--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "1.2.0",
+  "version": "1.2.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-import-remote/README.md",
   "dependencies": {
-    "@shopify/async": "^2.2.0",
-    "@shopify/react-hooks": "^1.12.0",
-    "@shopify/react-html": "^10.1.0",
-    "@shopify/react-intersection-observer": "^2.1.0",
-    "@shopify/useful-types": "^2.3.0",
+    "@shopify/async": "^2.2.1-mandatory-extensions-beta.0",
+    "@shopify/react-hooks": "^1.12.1-mandatory-extensions-beta.0",
+    "@shopify/react-html": "^10.1.1-mandatory-extensions-beta.0",
+    "@shopify/react-intersection-observer": "^2.1.1-mandatory-extensions-beta.0",
+    "@shopify/useful-types": "^2.3.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
