--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "3.6.0",
+  "version": "3.6.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-network/README.md",
   "dependencies": {
-    "@shopify/network": "^1.6.0",
-    "@shopify/react-effect": "^3.3.0",
-    "@shopify/react-hooks": "^1.12.0",
-    "@shopify/react-universal-provider": "^1.2.0",
+    "@shopify/network": "^1.6.1-mandatory-extensions-beta.0",
+    "@shopify/react-effect": "^3.3.1-mandatory-extensions-beta.0",
+    "@shopify/react-hooks": "^1.12.1-mandatory-extensions-beta.0",
+    "@shopify/react-universal-provider": "^1.2.1-mandatory-extensions-beta.0",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
@@ -36,7 +36,7 @@
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^2.3.0"
+    "@shopify/jest-koa-mocks": "^2.3.1-mandatory-extensions-beta.0"
   },
   "peerDependencies": {
     "koa": "^2.5.0",
