--- a/packages/react-performance/package.json
+++ b/packages/react-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-performance",
-  "version": "1.4.0",
+  "version": "1.4.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "Primitives to measure your React application's performance using `@shopify/performance`",
   "main": "index.js",
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-performance/README.md",
   "dependencies": {
-    "@shopify/performance": "^1.3.0",
+    "@shopify/performance": "^1.3.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/network": "^1.6.0"
+    "@shopify/network": "^1.6.1-mandatory-extensions-beta.0"
   },
   "files": [
     "build/*",
