--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "1.3.0",
+  "version": "1.3.1-mandatory-extensions-beta.0",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-web-worker/README.md",
   "dependencies": {
-    "@shopify/react-hooks": "^1.12.0",
-    "@shopify/useful-types": "^2.3.0",
-    "@shopify/web-worker": "^1.5.0",
+    "@shopify/react-hooks": "^1.12.1-mandatory-extensions-beta.0",
+    "@shopify/useful-types": "^2.3.1-mandatory-extensions-beta.0",
+    "@shopify/web-worker": "^1.5.1-mandatory-extensions-beta.0",
     "tslib": "^1.14.1"
   },
   "peerDependencies": {
